crates/astria-conductor-test/kubernetes/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: conductor-environment-deployment
  labels:
    app: conductor-environment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: conductor-environment
  template:
    metadata:
      labels:
        app: conductor-environment
    spec:
      containers:
        - name: celestia-app
          command: ["/scripts/start-celestia-appd.sh"]
          image: "ghcr.io/astriaorg/celestia-app:v0.11.0"
          volumeMounts:
            - mountPath: /scripts/
              name: celestia-appd-scripts-volume
            - mountPath: /home/celestia
              name: celestia-home-vol
          ports:
            - containerPort: 26657
        - name: celestia-bridge
          command:
          - /scripts/start-bridge.sh
          image: "ghcr.io/astriaorg/celestia-node:test-sha-07fa3e7"
          volumeMounts:
            - mountPath: /scripts/
              name: bridge-scripts-volume
            - mountPath: /home/celestia
              name: celestia-home-vol
          ports:
            - containerPort: 26659
              name: bridge-svc
        # - name: metro-sequencer
        #   command: ["/scripts/start-metro.sh"]
        #   image: "ghcr.io/astriaorg/metro:0.0.3"
        #   ports:
        #     - containerPort: 1318
        #       name: sequencer-svc
        #     - containerPort: 9100
        #   volumeMounts:
        #     - mountPath: /scripts/
        #       name: metro-scripts-volume
        #     - mountPath: /home/metro
        #       name: metro-home-vol
        #   envFrom:
        #     - configMapRef:
        #         name: metro-env
        - name: astria-sequencer
          # TODO: genesis state?
          command: ["/usr/local/bin/astria-sequencer"]
          image: "ghcr.io/astriaorg/sequencer:pr-137"
          ports:
            - containerPort: 26658
              name: sequencer-svc
            - containerPort: 9100
          volumeMounts:
            - mountPath: /home/sequencer
              name: sequencer-home-vol
        - name: cometbft
          command: ["/usr/local/bin/cometbft start"]
          image: "ghcr.io/astriaorg/cometbft:0.0.1"
          ports:
            - containerPort: 26657
              name: cometbft-svc
          volumeMounts:
            - mountPath: /home/cometbft
              name: cometbft-home-vol
        - name: astria-sequencer-relayer
          image: docker.io/library/debian:bookworm-slim
          command: ["/usr/local/bin/astria-sequencer-relayer"]
          volumeMounts:
            - mountPath: /usr/local/bin/astria-sequencer-relayer
              name: astria-sequencer-relayer-binary
              readOnly: true
            - mountPath: /home/relayer
              name: relayer-home-vol
            - mountPath: /root/.cometbft
              name: cometbft-home-vol
              readOnly: true
        - name: geth-executor
          command: ["/scripts/start-geth.sh"]
          image: "ghcr.io/astriaorg/go-ethereum:0.0.3"
          volumeMounts:
            - mountPath: /scripts/
              name: executor-scripts-volume
              readOnly: true
            - mountPath: /home/geth
              name: executor-home-vol
            # - mountPath: /root/.metro
            #   name: metro-home-vol
              readOnly: true
          ports:
            - containerPort: 8545
            - containerPort: 50051
      volumes:
      - name: astria-sequencer-relayer-binary
        hostPath:
          path: /tmp/astria/astria-sequencer-relayer
          type: File
      - name: bridge-scripts-volume
        configMap:
          name: bridge-scripts
          defaultMode: 0500
      # - name: metro-scripts-volume
      #   configMap:
      #     name: metro-scripts
      #     defaultMode: 0500
      - name: celestia-appd-scripts-volume
        configMap:
          name: celestia-appd-scripts
          defaultMode: 0500
      - name: executor-scripts-volume
        configMap:
          name: executor-scripts
          defaultMode: 0500
      - emptyDir: {}
        name: celestia-home-vol
      - emptyDir: {}
        name: cometbft-home-vol
      - emptyDir: {}
        name: sequencer-home-vol
      - emptyDir: {}
        name: executor-home-vol
      - emptyDir: {}
        name: relayer-home-vol
---
