crates/astria-conductor-test/kubernetes/prepull-daemon-set.yml
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: conductor-environment-prepull
spec:
  selector:
    matchLabels:
      name: conductor-environment-prepull
  template:
    metadata:
      labels:
        name: conductor-environment-prepull
    spec:
      containers:
        - name: pause
          image: gcr.io/google_containers/pause
---
