crates/astria-conductor-test/kubernetes/test-environment.yml
apiVersion: v1
kind: Service
metadata:
  name: conductor-environment-service
spec:
  ports:
  - name: sequencer-svc
    port: 1318
    targetPort: sequencer-svc
  - name: bridge-svc
    port: 26659
    targetPort: bridge-svc
  selector:
    app: conductor-environment
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: conductor-environment
  name: conductor-environment-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: conductor-environment
  template:
    metadata:
      labels:
        app: conductor-environment
    spec:
      containers:
      - command:
        - /scripts/start-celestia-appd.sh
        image: ghcr.io/astriaorg/celestia-app:v0.11.0
        name: celestia-app
        ports:
        - containerPort: 26657
        volumeMounts:
        - mountPath: /scripts/
          name: celestia-appd-scripts-volume
        - mountPath: /home/celestia
          name: celestia-home-vol
      - command:
        - /scripts/start-bridge.sh
        image: ghcr.io/astriaorg/celestia-node:test-sha-07fa3e7
        name: celestia-bridge
        ports:
        - containerPort: 26659
          name: bridge-svc
        volumeMounts:
        - mountPath: /scripts/
          name: bridge-scripts-volume
        - mountPath: /home/celestia
          name: celestia-home-vol
      - command:
        - /scripts/start-metro.sh
        image: ghcr.io/astriaorg/metro:0.0.3
        name: metro-sequencer
        ports:
        - containerPort: 1318
          name: sequencer-svc
        - containerPort: 9100
        volumeMounts:
        - mountPath: /scripts/
          name: metro-scripts-volume
        - mountPath: /home/metro
          name: metro-home-vol
      - args:
        - --sequencer-endpoint=http://localhost:1318
        - --celestia-endpoint=http://localhost:26659
        - --validator-key-file=/root/.metro/config/priv_validator_key.json
        command:
        - /usr/local/bin/astria-sequencer-relayer
        image: docker.io/library/debian:bookworm-slim
        name: astria-sequencer-relayer
        volumeMounts:
        - mountPath: /usr/local/bin/astria-sequencer-relayer
          name: astria-sequencer-relayer-binary
          readOnly: true
        - mountPath: /home/relayer
          name: relayer-home-vol
        - mountPath: /root/.metro
          name: metro-home-vol
          readOnly: true
      - command:
        - /scripts/start-geth.sh
        image: ghcr.io/astriaorg/go-ethereum:0.0.3
        name: geth-executor
        ports:
        - containerPort: 8545
        - containerPort: 50051
        volumeMounts:
        - mountPath: /scripts/
          name: executor-scripts-volume
          readOnly: true
        - mountPath: /home/geth
          name: executor-home-vol
        - mountPath: /root/.metro
          name: metro-home-vol
          readOnly: true
      volumes:
      - hostPath:
          path: /tmp/astria/astria-sequencer-relayer
          type: File
        name: astria-sequencer-relayer-binary
      - configMap:
          defaultMode: 320
          name: bridge-scripts-kmtkbk7fc7
        name: bridge-scripts-volume
      - configMap:
          defaultMode: 320
          name: metro-scripts-58b899ftcg
        name: metro-scripts-volume
      - configMap:
          defaultMode: 320
          name: celestia-appd-scripts-ffk5t7kfc2
        name: celestia-appd-scripts-volume
      - configMap:
          defaultMode: 320
          name: executor-scripts-c44cc226h7
        name: executor-scripts-volume
      - emptyDir: {}
        name: celestia-home-vol
      - emptyDir: {}
        name: metro-home-vol
      - emptyDir: {}
        name: executor-home-vol
      - emptyDir: {}
        name: relayer-home-vol
