crates/astria-conductor-test/kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: conductor-environment-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules: 
  - host: test.localdev.me
    http:
      paths:
        - path: "/sequencer/(.*)"
          pathType: ImplementationSpecific
          backend:
            service:
              name: conductor-environment-service
              port:
                number: 1318
        - path: "/bridge/(.*)"
          pathType: ImplementationSpecific
          backend:
            service:
              name: conductor-environment-service
              port:
                name: bridge-rest
        - path: /jsonrpc/(.*)
          pathType: ImplementationSpecific
          backend:
            service:
              name: conductor-environment-service
              port:
                name: bridge-jsonrpc
---
